--- a/css/main.css
+++ b/css/main.css
@@ -20,17 +20,21 @@ html, body {
     overflow: visible;
     --scroll-behavior: smooth;
     scroll-behavior: smooth;
+    background-color: #313338;
+    color: #dbdee1;
 }
 
 h1 {
     font-size: 2rem;
     font-family: 'Oswald', sans-serif;
+    color: #f2f3f5;
 }
 
 h2 {
     font-size: 1.5rem;
     font-family: 'Oswald', sans-serif;
     margin: 5% 0;
+    color: #f2f3f5;
 }
 
 main {
@@ -67,7 +71,7 @@ p {
     padding: 2% 0;
 }
 
-.code, .levelDesign, .writing, .interview {
+.front, .back, .writing, .infonuagique {
     font-family: 'Oswald', sans-serif;
     font-size: 1em;
     text-align: center;
@@ -79,11 +83,11 @@ p {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 10px 0px;
 }
 
-.code {
+.back {
     background: #750000;
 }
 
-.levelDesign {
+.front {
     background: #008EC2;
 }
 
@@ -91,7 +95,7 @@ p {
     background: #007A0C;
 }
 
-.interview {
+.infonuagique {
     background: #712375;
 }
 
@@ -100,7 +104,7 @@ p {
 footer {
     position: fixed;
     bottom: 0;
-    background-color: white;
+    background-color: #313338;
     padding: 4% 0;
 }
 
